added contacts and temples
